# ksqldb-streaming-analytic

./: .gitignore  README.md  bitbucket-pipelines.yml  data-producer.yml  kustomization.yaml  pyproject.toml
consumption/: Dockerfile  data-visualization-service.yml  data-visualization.yml  ksql-cli.sql  ksql_rest.py  visualization.py
kafka/: kafka.yaml  monitor-values.yml
kafka-with-data/: kustomization.yaml
kafka-with-data/zookeper/: zk-cs.yml  zk-hs.yml  zk-pdb.yml
ksqldb/: ksqlDB.yml  ksqldb-service.yml  ksqldb.yml
snippets/: earthquakes.py  kafka_producer.py  ksql-cli.sql  ksql_rest.py  pyproject.toml  visualization.py
snippets/sql/: stream_creation.sql
zookeper/: zk.yml
