[tool.poetry]
name = "platform-poc-airbyte"
version = "0.0.1"
description = "This is a PoC"
authors = ["zahid <zgalea@acid.cl>"]
license = "GNU"
readme = "README.md"
packages = [{ include = "platform_poc_1" }]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
